--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@momo/ola": ["apps/libs/ola/src/index.ts"],
+      "@momo/ssp": ["apps/libs/ssp/src/index.ts"],
+      "@momo/triggers": ["apps/libs/triggers/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
